# semmeddb_exclude_list

./: .cruft.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  qc.yml
src/semmeddb_exclude_list/: __init__.py  cli.py  download.py  main.py
src/{{ cookiecutter.project_name|lower()|replace(' ', '_')|replace('-', '_') }}/: cli.py
tests/: __init__.py  demo_test.py
